--- a/backend/.env
+++ b/backend/.env
@@ -63,3 +63,19 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+VNPAY_TMN_CODE=2WS543MD
+VNPAY_HASH_SECRET=PIHFGHKEGOG6PG2AP68PY2HJD35VCIP5
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://127.0.0.1:8000/vnpay-return
+
+
+MOMO_PARTNER_CODE=YOUR_PARTNER_CODE
+MOMO_ACCESS_KEY=YOUR_ACCESS_KEY
+MOMO_SECRET_KEY=YOUR_SECRET_KEY
+MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
+MOMO_REDIRECT_URL=http://127.0.0.1:8000/momo-return
+MOMO_IPN_URL=http://127.0.0.1:8000/momo-ipn
+
+
