--- a/backend/.env
+++ b/backend/.env
@@ -65,17 +65,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 
-VNPAY_TMN_CODE=2WS543MD
-VNPAY_HASH_SECRET=PIHFGHKEGOG6PG2AP68PY2HJD35VCIP5
+VNPAY_TMN_CODE=23TEYQEX
+VNPAY_HASH_SECRET=3NDQM8R7K1JK7Y6OJOTAL3KFU8KQ2B0Y
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_RETURN_URL=http://127.0.0.1:8000/vnpay-return
+VNPAY_RETURN_URL=http://localhost:8000/vnpay-return
 
-
-MOMO_PARTNER_CODE=YOUR_PARTNER_CODE
-MOMO_ACCESS_KEY=YOUR_ACCESS_KEY
-MOMO_SECRET_KEY=YOUR_SECRET_KEY
-MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
-MOMO_REDIRECT_URL=http://127.0.0.1:8000/momo-return
-MOMO_IPN_URL=http://127.0.0.1:8000/momo-ipn
 
 
