--- a/backend/.env
+++ b/backend/.env
@@ -68,7 +68,10 @@ VITE_APP_NAME="${APP_NAME}"
 VNPAY_TMN_CODE=23TEYQEX
 VNPAY_HASH_SECRET=3NDQM8R7K1JK7Y6OJOTAL3KFU8KQ2B0Y
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_RETURN_URL=http://localhost:8000/vnpay-return
+VNPAY_RETURN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/return
+VNPAY_IPN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/ipn
+
+
 
 
 
