--- a/backend/.env
+++ b/backend/.env
@@ -70,6 +70,7 @@ VNPAY_HASH_SECRET=3NDQM8R7K1JK7Y6OJOTAL3KFU8KQ2B0Y
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_RETURN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/return
 VNPAY_IPN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/ipn
+VNPAY_REFUND_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 
 
 
