--- a/backend/.env
+++ b/backend/.env
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dacs
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,14 +47,6 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -71,6 +63,22 @@ VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_RETURN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/return
 VNPAY_IPN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/ipn
 VNPAY_REFUND_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+
+
+# MAIL
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=maithelamcode@gmail.com
+MAIL_PASSWORD=nqqluogpsheyhpok
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=maithelamcode@gmail.com
+MAIL_FROM_NAME="TechStore"
+
+# Nếu dùng Sanctum
+SESSION_DRIVER=cookie
+SESSION_LIFETIME=120
+SANCTUM_STATEFUL_DOMAINS=localhost
 
 
 
