--- a/backend/.env
+++ b/backend/.env
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dacs
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -69,10 +69,10 @@ VNPAY_REFUND_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=maithelamcode@gmail.com
-MAIL_PASSWORD=nqqluogpsheyhpok
+MAIL_USERNAME=huyencandy8386@gmail.com
+MAIL_PASSWORD=fprxqvanmnpsgznu
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=maithelamcode@gmail.com
+MAIL_FROM_ADDRESS=huyencandy8386@gmail.com
 MAIL_FROM_NAME="TechStore"
 
 # Nếu dùng Sanctum
