--- a/backend/.env
+++ b/backend/.env
@@ -60,8 +60,8 @@ VITE_APP_NAME="${APP_NAME}"
 VNPAY_TMN_CODE=23TEYQEX
 VNPAY_HASH_SECRET=3NDQM8R7K1JK7Y6OJOTAL3KFU8KQ2B0Y
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_RETURN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/return
-VNPAY_IPN_URL=https://undaughterly-isothermally-jesica.ngrok-free.dev/api/vnpay/ipn
+VNPAY_RETURN_URL=https://transmissible-sacrificially-lucio.ngrok-free.dev/api/vnpay/return
+VNPAY_IPN_URL=https://transmissible-sacrificially-lucio.ngrok-free.dev/api/vnpay/ipn
 VNPAY_REFUND_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 
 
@@ -79,6 +79,11 @@ MAIL_FROM_NAME="TechStore"
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 SANCTUM_STATEFUL_DOMAINS=localhost
+
+# tk admin
+ADMIN_NAME=Administrator
+ADMIN_EMAIL=admin@domain.com
+ADMIN_PASSWORD=Admin@123
 
 
 
