--- a/backend/.env
+++ b/backend/.env
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dacs
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -57,8 +57,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 
-VNPAY_TMN_CODE=23TEYQEX
-VNPAY_HASH_SECRET=3NDQM8R7K1JK7Y6OJOTAL3KFU8KQ2B0Y
+VNPAY_TMN_CODE=23TE
+VNPAY_HASH_SECRET=3NDQM8R7K1JK7Y6OJOTA
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_RETURN_URL=https://transmissible-sacrificially-lucio.ngrok-free.dev/api/vnpay/return
 VNPAY_IPN_URL=https://transmissible-sacrificially-lucio.ngrok-free.dev/api/vnpay/ipn
@@ -69,10 +69,10 @@ VNPAY_REFUND_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=huyencandy8386@gmail.com
-MAIL_PASSWORD=fprxqvanmnpsgznu
+MAIL_USERNAME=huyencand6@gmail.com
+MAIL_PASSWORD=fprxqu
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=huyencandy8386@gmail.com
+MAIL_FROM_ADDRESS=huyencand6@gmail.com
 MAIL_FROM_NAME="TechStore"
 
 # Nếu dùng Sanctum
